# first_principles

./: .gitignore
MonadCh18/: badMonad.hs  bind.hs  eitherMonad.hs  exercises.hs  exercises2.hs  monadComposition.hs  otherMonads.hs
applicativeCh17/: applicativeQuickCheck.hs  badMonoid.hs  convenience.hs  shortExercises.hs  validation.hs
ch10/: database.hs  exercises.hs  fib.hs
ch11/: .phone.hs.swp  \  binaryTree.hs  construcDeconstruc.hs  data.hs  exercises.hs  exponential.hs  higherKind.hs  huttonsRazor.hs  normalForm.hs  person.hs  phone.hs  tooMany.hs
ch12/: either.hs  exercises.hs  loveNothing.hs  maybe.hs  unfolds.hs
ch13/: gimmePerson.hs  palindrome.hs  print.hs
ch13/call-em-up/: Main.hs  call-em-up.cabal  stack.yaml
ch13/call-em-up/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: hello-0.1.0.0-3b4f40d6640ae172e05cfcf29f4c60d4.conf  package.cache
ch13/doNotation/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/flag-cache/: hello-0.1.0.0-3b4f40d6640ae172e05cfcf29f4c60d4  hello-haskell-0.1.0.0
ch13/hello/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: hello-0.1.0.0-3b4f40d6640ae172e05cfcf29f4c60d4.conf  package.cache
ch13/hello/src/: Hello.hs  Main.hs
ch14/arithmetic/: arithmetic.cabal
ch14/arithmetic/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/doc/arithmetic-0.1.0.0/: LICENSE
ch14/arithmetic/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/flag-cache/: arithmetic-0.1.0.0-628b0c5194dd9788cdeacfaf3c3725e1
ch14/arithmetic/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/arithmetic-0.1.0.0-5Rizd8msk9hIQMNOqJJLHj/: Arithmetic.hi
ch14/arithmetic/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/arithmetic-0.1.0.0-GG1f28FfC9EJjydZsyoBGp/: Arithmetic.dyn_hi  Arithmetic.hi
ch14/arithmetic/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: arithmetic-0.1.0.0-b130dba32c8376f5e6cb9fadb62d83aa.conf  package.cache
ch14/arithmetic/app/: Main.hs
ch14/arithmetic/src/: Arithmetic.hs
ch14/arithmetic/test/: Spec.hs
ch14/division/: division.cabal
ch14/generator/: generator.cabal
ch14/morse/: morse.cabal  stack.yaml
ch14/morse/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/flag-cache/: morse-0.1.0.0-972af4618336a2a0b07bcedc27b30b61  morse-0.1.0.0-aca3139452b0dd8ea16031c7c45e93d7
ch14/morse/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/morse-0.1.0.0-DOv10sjTwzK7X2dpL1LJqw/: Morse.dyn_hi
ch14/morse/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: morse-0.1.0.0-aca3139452b0dd8ea16031c7c45e93d7.conf  package.cache
ch14/morse/.stack-work/install/x86_64-linux/lts-5.14/7.10.3/flag-cache/: QuickCheck-2.8.1-8a87b464a167a1dd789e3a0c72a16364  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  random-1.1-c46cc413d88c0a330b5495d03f0ed464  tf-random-0.5-be1be3a7eeba5ee8baa6cee25a76f884
ch14/morse/app/: Main.hs
ch14/morse/src/: Morse.hs
ch14/morse/test/: Spec.hs
ch2/: .exercises.hs.swp  FunctionWithWhere.hs  exercises.hs  learn.hs  test.hs
ch3/: curryIsAwesome.hs  print1.hs  print2.hs  print4.hs  print5broken.hs
ch4/: exercises.hs  greetIfCool1.hs  intermissionExercises.hs
ch5/: arith3broken.hs  currying.hs  exercises.hs  inference.hs  sing.hs  what.hs
ch6/: dayOfWeek.hs  exercises.hs  followingAlong.hs  numberish.hs  operation.hs  partialFunk.hs  trivial.hs
ch7/: .arguments.hs.swo  .arguments.hs.swp  .higherOrderFunctions.hs.swp  arguments.hs  arith2.hs  arith4.hs  exercises.hs  greetIfCool3.hs  higherOrderFunctions.hs  matchingTuples1.hs  patternMatching.hs  registeredUser1.hs
ch8/: .fibonacci.hs.swp  .wordNumber.hs.swp  exercises.hs  factorial.hs  fibonacci.hs  wordNumber.hs
ch8/wordNumber/: wordNumber.cabal
ch8/wordNumber/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/flag-cache/: wordNumber-0.1.0.0-c767ea8645b5853c0e29a0e6a055e09a
ch8/wordNumber/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/wordNumber-0.1.0.0-8J3wChqVM8JEzQKGtfQ9mu/: WordNumber.dyn_hi  WordNumber.hi
ch8/wordNumber/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/wordNumber-0.1.0.0-KawdjPsfXmuGg8AMbPck9V/: WordNumber.dyn_hi  WordNumber.hi
ch8/wordNumber/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: package.cache  wordNumber-0.1.0.0-9d9cf169f56afbd8806d3358455b2a06.conf
ch8/wordNumber/app/: Main.hs
ch8/wordNumber/src/: WordNumber.hs
ch8/wordNumber/test/: Spec.hs
ch9/: .range.hs.swp  cipher.hs  exercises.hs  extract.hs  pattern.hs  poemLines.hs  range.hs  spines.hs  tail.hs
ch9/cipher/: cipher.cabal
ch9/cipher/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/flag-cache/: cipher-0.1.0.0-d677e0abdeb59a0ab44036b808b656d8
ch9/cipher/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/lib/x86_64-linux-ghc-7.10.2/cipher-0.1.0.0-A0KGpcUSr3641iFF4slR4w/: Cipher.dyn_hi  Cipher.hi
ch9/cipher/.stack-work/install/x86_64-linux/lts-3.7/7.10.2/pkgdb/: cipher-0.1.0.0-a4adefb6065d0cc2cd10c52d0f9e2011.conf  package.cache
ch9/cipher/app/: Main.hs
ch9/cipher/src/: Cipher.hs
ch9/cipher/test/: Spec.hs
composeTypesCh25/: applicativeCompose.hs  bifunctor.hs
foldableCh20/: foldableInstances.hs  functions.hs
functorCh16/: canonical.hs  classes.hs  exercises.hs  flip.hs  functorQuickCheck.hs  goodBadUgly.hs  ignoringPossibilities.hs  ioFunctor.hs  liftExerc.hs  replaceExperiment.hs
monoidCh15/: associativity.hs  bull.hs  madlib.hs  monoidExercises.hs  optional.hs  semigroupExercises.hs
monoidCh15/maybe-monoid/: LICENSE  maybe-monoid.cabal
monoidCh15/orphan-instance/: Listy.hi  Listy.hs  (+2 more)
parsersCh24/: introExample.hs
readerCh22/: .newBeginning.hs.swp  applicativeReader.hs  ask.hs  exercises.hs  monadReader.hs  newBeginning.hs
stateCh23/: diceGame.hs
transformersCh26/: exercises.hs
transformersCh26/kleisli/: kleisli.cabal
transformersCh26/kleisli/src/: Main.hs
transformersCh26/scotty-example/: scotty-example.cabal
transformersCh26/scotty-example/src/: Main.hs
traversableCh21/: .exercises.hs.swp  exercises.hs  query.hs
(+31 files in other folders)
