name:                call-em-up
version:             0.1.0.0
synopsis:            Call the sayHello function
description:         Please see README.md
homepage:            http://github.com/githubuser/call-em-up#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Lander
maintainer:          example@example.com
copyright:           2010 Nathan Lander
category:            User-interface
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable call-em-up
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , hello
  default-language:    Haskell2010
