name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hello-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Lander
maintainer:          example@example.com
copyright:           2010 Nathan Lander
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hello
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hello-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hello
