name:                cipher
version:             0.1.0.0
synopsis:            Interactive cipher
description:         Please see README.md
homepage:            http://github.com/githubuser/cipher#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Lander
                   , Julie Moronuki
                   , Christopher Allen
maintainer:          lander89@gmail.com
copyright:           BSD3
category:            Interactive
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cipher
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cipher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cipher
  default-language:    Haskell2010

test-suite cipher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cipher
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nlander/cipher
