name:                scotty-example
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/nlander/scotty-example#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Lander
maintainer:          lander89@gmail.com
copyright:           cc Attribution-ShareAlike 4.0 International
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scotty-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , transformers
